Correct entity name

--- a/Open-ILS/web/opac/extras/slimpac/start.html
+++ b/Open-ILS/web/opac/extras/slimpac/start.html
@@ -96,7 +96,7 @@
 				<tr class="bluerow">
 					<td>
 						<div class='search_field'>
-							<span>&slimpac.search.nowSearching;</span>
+							<span>&slimpac.start.nowSearching;</span>
 							<select name="searchOrg">
 								<!--#include file="lib_list.inc" -->
 							</select>
