--- a/Open-ILS/xul/staff_client/server/admin/upload_xacts.xhtml
+++ b/Open-ILS/xul/staff_client/server/admin/upload_xacts.xhtml
@@ -36,7 +36,7 @@
 		seskey:<input type='text' id="seskey" name='seskey' value=''> </input>
 		file:<input type='file' id="file" name='file'> </input> 
 		html:<input type='text' id="html" name='html' value='1'> </input> 
-		<input type='submit' id="submit" name='Submit' value='Upload' disabled="true"> </input>
+		<input type='submit' id="submit" name='Submit' value='&staff.server.admin.upload_xacts.upload;' disabled="true"> </input>
 	</form>
 </body>
 </html>
