--- a/Open-ILS/xul/staff_client/server/cat/marc_view.html
+++ b/Open-ILS/xul/staff_client/server/cat/marc_view.html
@@ -24,7 +24,7 @@
     		xsltProcessor.importStylesheet(xsl);
             return true;
         } catch(E) {
-            alert('An error occured and we are unable to display the MARC here.\nError in xsl_marc2html_init: ' + E);
+            alert('An error occurred and we are unable to display the MARC here.\nError in xsl_marc2html_init: ' + E);
             return false;
         }
 	}
