--- a/Open-ILS/xul/staff_client/server/cat/marc_view.html
+++ b/Open-ILS/xul/staff_client/server/cat/marc_view.html
@@ -39,7 +39,7 @@
             var fragment = xsltProcessor.transformToFragment(node, document);
             document.body.appendChild(fragment);
         } catch(E) {
-            alert('An error occured and we are unable to display the MARC here.\nError in apply_xsl_marc2html: ' + E);
+            alert('An error occurred and we are unable to display the MARC here.\nError in apply_xsl_marc2html: ' + E);
         }
 	}
 
