--- a/Open-ILS/web/reports/oils_rpt_editor.xhtml
+++ b/Open-ILS/web/reports/oils_rpt_editor.xhtml
@@ -34,8 +34,24 @@
 			</tr>
 			<tr>
 				<th>Report Columns:</th>
-				<td><b id='oils_rpt_report_editor_cols'/></td>
+				<td nowrap='nowrap'><b id='oils_rpt_report_editor_cols'/></td>
 			</tr>
+			<tr class='hide_me' id='oils_rpt_editor_pivot_label_row'>
+				<th>Pivot Label Column:</th>
+				<td>
+                    <select id='oils_rpt_editor_pivot_label'>
+                        <option selected='selected' value=''> -- Select One (optional) -- </option>
+                    </select>
+                </td>
+			</tr>
+			<tr class='hide_me' id='oils_rpt_editor_pivot_data_row'>
+				<th>Pivot Data Column:</th>
+				<td>
+                    <select id='oils_rpt_editor_pivot_data'>
+                    </select>
+                </td>
+			</tr>
+
 			<!--
 			<tr><td colspan='2'><hr/></td></tr>
 			-->
