move the translation widget out to openils.widget

--- a/Open-ILS/web/conify/global/actor/org_unit_type.html
+++ b/Open-ILS/web/conify/global/actor/org_unit_type.html
@@ -190,7 +190,7 @@
 											}
 										</script>
 									</span>
-									<span dojoType="openils.I18N.translationWidget" targetObject="current_fm_type" field="name"></span>
+									<span dojoType="openils.widget.TranslatorPopup" targetObject="current_fm_type" field="name"></span>
 								</td>
 							</tr>
 							<tr>
@@ -203,7 +203,7 @@
 											}
 										</script>
 									</span>
-									<span dojoType="openils.I18N.translationWidget" targetObject="current_fm_type" field="opac_label"></span>
+									<span dojoType="openils.widget.TranslatorPopup" targetObject="current_fm_type" field="opac_label"></span>
 								</td>
 							</tr>
 							<tr>
