--- a/Open-ILS/web/conify/global/permission/grp_tree.html
+++ b/Open-ILS/web/conify/global/permission/grp_tree.html
@@ -266,7 +266,7 @@
 											}
 										</script>
 									</span>
-									<span dojoType="openils.I18N.translationWidget" targetObject="current_fm_group" field="name"></span>
+									<span dojoType="openils.widget.TranslatorPopup" targetObject="current_fm_group" field="name"></span>
 								</td>
 							</tr>
 							<tr>
@@ -280,7 +280,7 @@
 										  onChange="if (current_group) group_store.setValue( current_group, "description", this.getValue() );"
 										></textarea>
 									</span>
-									<span dojoType="openils.I18N.translationWidget" targetObject="current_fm_group" field="description"></span>
+									<span dojoType="openils.widget.TranslatorPopup" targetObject="current_fm_group" field="description"></span>
 								</td>
 							</tr>
 							<tr>
