--- a/Open-ILS/web/conify/global/actor/org_unit.html
+++ b/Open-ILS/web/conify/global/actor/org_unit.html
@@ -222,7 +222,7 @@
 											if (current_ou) ou_list_store.setValue( current_ou, "name", this.getValue() );
 										</script>
 									</span>
-									<span dojoType="openils.I18N.translationWidget" targetObject="current_fm_ou" field="name"></span>
+									<span dojoType="openils.widget.TranslatorPopup" targetObject="current_fm_ou" field="name"></span>
 								</td>
 							</tr>
 							<tr>
